Deployment Files/drone-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: droneserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: droneserver
    spec:
      containers:
      - name: droneserver
        image: drone/drone:0.7
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /var/lib/drone
          name: drone-lib
      volumes:
      - name: drone-lib
        hostPath:
          path: /var/lib/drone
